--- a/chat.html
+++ b/chat.html
@@ -84,7 +84,7 @@
     </form>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <span>Your screen is too big 😥</span>
     </div>    
 
     <script src="https://kit.fontawesome.com/c3627f97f3.js" crossorigin="anonymous"></script>
